# WaterCoherer

./: .gitignore  CMakeLists.txt  LICENSE  script.sh
include/: CImage.hpp  CloudDetection.hpp  LandsatImage.hpp  NDWICalculator.hpp  Utils.hpp  WaterCohererTypes.hpp  WaterDifferencer.hpp
src/: CloudDetection.cpp  LandsatImage.cpp  NDWICalculator.cpp  NDWICalculator.hpp  Utils.cpp  WaterDifferencer.cpp  WaterDifferencer.hpp  main.cpp
